# noctuary

./: Claude-AI-powered note collection tool for autists.md  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  ollama.rs  state.rs  vigil.rs
src-tauri/src/commands/: librarian.rs  mod.rs  offerings.rs  settings.rs  vault.rs  vigil.rs
src-tauri/src/db/: connections.rs  items.rs  mod.rs  offerings.rs  schema.rs  tags.rs  vigil.rs
src/lib/components/: Whispers.svelte
src/lib/components/layout/: Sidebar.svelte
src/lib/stores/: whispers.svelte.ts
src/lib/theme/: global.css  tokens.css
src/routes/: +layout.svelte  +page.svelte
src/routes/librarian/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/vault/: +page.svelte
src/routes/vault/[id]/: +page.svelte
